# django-best-practices-template

./: .editorconfig  .env  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  manage.py  pyproject.toml
apps/accounts/migrations/: 0001_initial.py
project_name/: asgi.py  manage.py  urls.py  wsgi.py
project_name/project/: asgi.py  urls.py  wsgi.py
project_name/project/settings/: base.py  development.py
project_name/settings/: base.py  development.py  production.py
