[tool.poetry]
name = "{{ project_name }}"
package-mode = false
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
django = "{{ django_version }}"
environs = {extras = ["django"], version = "^11.0.0"}
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.2"
ipython = "^8.25.0"
flake8 = "^7.1.0"
flake8-bugbear = "^24.4.26"
flake8-builtins = "^2.5.0"
flake8-coding = "^1.3.2"
black = {version = "^24.4.2", allow-prereleases = true}
pre-commit = "^3.7.1"
isort = "^5.13.2"
colorlog = "^6.8.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
